feat: add auth0 flow on sensitive endpoints

--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -1,6 +1,6 @@
 all:
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o main .
-	zip main.zip main
+	zip main.zip main .env
 
 clean:
 	rm main.zip || true
