--- a/src/backend/scanner/Makefile
+++ b/src/backend/scanner/Makefile
@@ -1,4 +1,8 @@
-all:
+.PHONY: all amd arm clean
+
+all: amd
+
+amd:
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o main .
 	zip main.zip main .env
 
