feat(dev): Add run-api and run-scanner commands to makefiles

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -22,5 +22,11 @@ scanner-arm:
 	GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o scanner cmd/scanner/main.go
 	zip scanner.zip scanner .env
 
+run-api:
+	GOARCH=arm64 go run cmd/api/main.go
+
+run-scanner:
+	GOARCH=arm64 go run cmd/scanner/main.go
+
 clean:
 	rm scanner.zip api.zip scanner api || true
