--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    working-directory: ./backend
     steps:
       - uses: actions/checkout@v3
 
@@ -17,4 +18,5 @@ jobs:
           go-version: '1.18'
 
       - name: Test
+        working-dir:
         run: go test ./...
