--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,10 @@ name: CI
 on: 
   pull_request:
     branches: [ main ]
+    types: 
+      - synchronize
+      - opened
+      - reopened
 
 jobs:
   test:
